@@ -144,7 +144,7 @@ typedef enum nsd_rc nsd_rc_type;
 #define TYPE_L64        106     /* RFC 6742 */
 #define TYPE_LP         107     /* RFC 6742 */
 
-#ifdef EUI_RRTYPES
+#ifdef DRAFT_RRTYPES
 #define TYPE_EUI48      108     /* draft-jabley-dnsext-eui48-eui64-rrtypes */
 #define TYPE_EUI64      109     /* draft-jabley-dnsext-eui48-eui64-rrtypes */
 #endif
@@ -171,7 +171,7 @@ typedef enum nsd_rc nsd_rc_type;
 
 #define IP4ADDRLEN	(32/8)
 #define IP6ADDRLEN	(128/8)
-#ifdef EUI_RRTYPES
+#ifdef DRAFT_RRTYPES
 #define EUI48ADDRLEN	(48/8)
 #define EUI64ADDRLEN	(64/8)
 #endif
@@ -197,7 +197,7 @@ enum rdata_wireformat
 	RDATA_WF_BINARYWITHLENGTH,   /* Binary data preceded by 1 byte length */
 	RDATA_WF_APL,                /* APL data.  */
 	RDATA_WF_IPSECGATEWAY,       /* IPSECKEY gateway ip4, ip6 or dname. */
-#ifdef EUI_RRTYPES
+#ifdef DRAFT_RRTYPES
 	RDATA_WF_ILNP64,             /* 64-bit uncompressed IPv6 address.  */
 	RDATA_WF_EUI48,	             /* 48-bit address.  */
 	RDATA_WF_EUI64               /* 64-bit address.  */
@@ -238,7 +238,7 @@ enum rdata_zoneformat
 	RDATA_ZF_NSEC,		/* NSEC type bitmap.  */
 	RDATA_ZF_LOC,		/* Location data.  */
 	RDATA_ZF_ILNP64,	/* 64-bit uncompressed IPv6 address.  */
-#ifdef EUI_RRTYPES
+#ifdef DRAFT_RRTYPES
 	RDATA_ZF_EUI48,		/* EUI48 address.  */
 	RDATA_ZF_EUI64,		/* EUI64 address.  */
 #endif
@@ -264,7 +264,7 @@ typedef struct rrtype_descriptor rrtype_descriptor_type;
  *
  * EUI64 + 1
  */
-#ifdef EUI_RRTYPES
+#ifdef DRAFT_RRTYPES
 #define RRTYPE_DESCRIPTORS_LENGTH  (TYPE_EUI64 + 1)
 #else
 #define RRTYPE_DESCRIPTORS_LENGTH  (TYPE_LP + 1)
