@@ -452,7 +452,7 @@ zparser_conv_ilnp64(region_type *region, const char *text)
 	return r;
 }
 
-#ifdef EUI_RRTYPES
+#ifdef DRAFT_RRTYPES
 static uint16_t *
 zparser_conv_eui48(region_type *region, const char *text)
 {
